roles/alb-controller/files/ingress-argocd.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
  namespace: argocd
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - host: argocd.szcoders.com
      http:
        paths: 
          - path: /
            pathType: Prefix 
            backend:
              service:
                name: argocd-server
                port:
                  number: 80
